--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  font-family: 'Gothic A1', sans-serif;
+  /* font-family: 'Gothic A1', sans-serif; */
 }
 
 /* #app {
